--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,59 @@
+<div class="container" *ngIf="weatherData">
+  <div class="upper-data">
+    <img src="../assets/hot.jpg" *ngIf="weatherData.main.temp > 15">
+    <img src="../assets/cold.jpg" *ngIf="weatherData.main.temp <= 15">
+
+    <div class="weather-data">
+      <div class="location">{{weatherData.name}}</div>
+      <div class="temperature">{{weatherData.main.temp | number: '1.0-0'}}°C </div>
+    </div>
+  </div>
+  <div class="lower-data">
+      <div class="more-info-label">
+        More Information
+      </div>
+      <div class="more-info-container">
+        <div class="info-block">
+          <div class="info-block-label">
+            <img src="../assets/min.png" alt="">
+            <span>min</span>
+          </div>
+          <div class="info-block-value">
+            {{weatherData.main.temp_min | number: '1.0-0'}}
+          </div>
+        </div>
+        <div class="info-block">
+          <div class="info-block-label">
+            <img src="../assets/max.png" alt="">
+            <span>max</span>
+          </div>
+          <div class="info-block-value">
+            {{weatherData.main.temp_max | number: '1.0-0'}}
+          </div>
+        </div>
+        <div class="info-block">
+          <div class="info-block-label">
+            <img src="../assets/humidity.png" alt="">
+            <span>humidity</span>
+          </div>
+          <div class="info-block-value">
+            {{weatherData.main.humidity}}%
+          </div>
+        </div>
+        <div class="info-block">
+          <div class="info-block-label">
+            <img src="../assets/wind.png" alt="">
+            <span>wind</span>
+          </div>
+          <div class="info-block-value">
+            {{weatherData.wind.speed}} km/hr
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
+
+<!-- 
 <div class="container">
   <div class="upper-data">
     <img src="../assets/hot.jpg" *ngIf="19 > 15">
@@ -51,6 +107,6 @@
         </div>
       </div>
   </div>
-</div>
+</div> -->
 
 <router-outlet></router-outlet>
