adding a search functionality

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -103,3 +103,23 @@
   align-items: center;
   color: whitesmoke;
 }
+
+.search {
+  margin: 1em;
+  text-align: center;
+}
+
+.search input {
+  background-color: var(--shadow);
+  outline: none;
+  border: none;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  padding: 1em;
+  color: var(--card-color);
+  font-size: 0.8em;
+  text-align: center;
+}
