--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<div class="search">
+  <form #f = 'ngForm' (submit)="onSubmit()">
+    <input type="text" placeholder="Search city" name="city" [(ngModel)]="cityName">
+  </form>
+</div>
+
 <div class="container" *ngIf="weatherData">
   <div class="upper-data">
     <img src="../assets/hot.jpg" *ngIf="weatherData.main.temp > 15">
